--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,14 +4,21 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" 
     android:gravity="center"
-    android:background="#E1BCFF">
+    android:background="@color/lighter_purple">
 
     <TextView
         android:id="@+id/message_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#8D14FF"
+        android:layout_height="80dp"
+        android:textColor="@color/darker_purple"
         android:text="@string/login_successed"
         android:textSize="20sp"/>
+    <Button 
+        android:id="@+id/force_refresh_button"
+        android:text="登陆"
+        android:textColor="@color/darker_purple"
+        android:background="@drawable/button_background"
+        android:layout_width="90dp"
+        android:layout_height="40dp"/>
 
 </LinearLayout>
