--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" 
     android:gravity="center"
-    android:background="@color/lighter_purple">
+    android:background="@drawable/flower">
 
     <TextView
         android:id="@+id/message_text"
