--- a/res/drawable/button_press.xml
+++ b/res/drawable/button_press.xml
@@ -6,5 +6,5 @@
     <corners
         android:radius="8dp"/>
     <solid
-        android:color="@color/change_color"/>
+        android:color="@color/half_transparent_darker_purple"/>
 </shape>
