--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" 
-    android:gravity="center"
-    android:background="@drawable/flower">
+    android:layout_height="fill_parent">
+	<ImageView
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:id="@+id/imageview_background"
+		android:scaleType="fitXY"
+		android:adjustViewBounds="false"
+		android:src="@drawable/flower"/>
+	<LinearLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:orientation="vertical"
+	    android:gravity="center">
 
     <TextView
         android:id="@+id/message_text"
@@ -20,5 +29,6 @@
         android:background="@drawable/button_background"
         android:layout_width="90dp"
         android:layout_height="40dp"/>
+	</LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
